# catminator

./: .gitignore  Changelog.md  LICENSE  README.md  pyproject.toml  requirements.txt
catminator/: __main__.py
catminator/camera/: camera.py  camera_config.py
catminator/motion_detector/: motion_detector.py
catminator/notification/: Notificator.py
catminator/util/: logger.py
catminator/util/stubs/: pi_camera.py  pi_rgb_array.py
config/: config_file.py  global.yml
data/: data_file.py
